# auto-clip

./: .dockerignore  .env.example  .gitattributes  .gitignore  DEPLOY.md  README.md  ROUGH_GUIDE.md  docker-compose.yml  pyproject.toml  railway.json  requirements.txt  scour.toml
.github/workflows/: ci.yml
autoclip/: brand.py  config.py  db.py  media.py  models.py  scenes.py  transcribe.py
autoclip/llm/: anthropic_provider.py  heuristic.py  selector.py
autoclip/pipeline/: celery_app.py  tasks.py
autoclip/render/: ffmpeg_cmds.py  formats.py  layout.py  render.py  subtitles.py
autoclip/web/: app.py
autoclip/web/templates/: base.html  error.html  index.html  job.html
brandkit/: brand.yaml
docker/: Dockerfile
plans/: 001-celery-visibility-timeout.md  002-api-job-status-404.md  003-canvas-layout-aspect.md  004-test-baseline-ci.md  README.md
scripts/: cleanup.py  fetch_test_footage.py  railway_start.sh
tests/: conftest.py  test_brand.py  test_ffmpeg_cmds.py  test_heuristic.py  test_layout.py  test_llm_sanitize.py  test_media.py  test_subtitles.py  test_tasks.py  test_web_app.py  test_word_captions.py
