[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autoclip"
version = "0.1.0"
description = "Upload event footage, get branded, captioned, platform-ready social clips. Runs entirely locally."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }

# Runtime dependencies. This is the single source of truth; the Docker image and
# CI both install from here (no separate requirements.txt to drift out of sync).
dependencies = [
    "fastapi==0.115.*",
    "uvicorn[standard]==0.34.*",
    "jinja2==3.1.*",
    "python-multipart==0.0.20",
    "sqlalchemy==2.0.*",
    "psycopg2-binary==2.9.*",
    "celery[redis]==5.5.*",
    "redis==5.*",
    "faster-whisper==1.1.*",
    "requests==2.*",
    "scenedetect[opencv-headless]==0.6.*",
    "anthropic==0.49.*",
    "pydantic-settings==2.*",
    "pyyaml==6.*",
    "jsonschema==4.*",
    "yt-dlp",
]

[project.optional-dependencies]
# Development + CI tooling. Install with: pip install -e ".[dev]"
dev = [
    "pytest==8.*",
    "pytest-cov==6.*",
    "httpx==0.27.*",
    "ruff==0.9.*",
    "mypy==1.15.*",
    "types-PyYAML",
    "types-requests",
    "types-jsonschema",
]

[tool.setuptools.packages.find]
include = ["autoclip*"]

[tool.setuptools.package-data]
"autoclip.web" = ["templates/*.html"]

[tool.ruff]
target-version = "py312"
line-length = 110
extend-exclude = [".venv", ".tools", ".claude", "data"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "RUF", # ruff-specific
]
ignore = [
    "B008", # function calls in argument defaults — FastAPI dependency idiom
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]  # long assertion strings in tests are fine

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true   # heavy ML/media libs ship no stubs
exclude = ['^\.venv/', '^\.tools/', '^\.claude/', '^data/']

[tool.pytest.ini_options]
addopts = "-q --strict-markers --strict-config"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["autoclip"]
omit = ["autoclip/transcribe.py", "autoclip/scenes.py"]  # thin wrappers over heavy ML libs, exercised E2E only

[tool.coverage.report]
show_missing = true
skip_covered = true
